added accounts app and signup views

--- a/diyblog/blog/templates/blog/blog_detail.html
+++ b/diyblog/blog/templates/blog/blog_detail.html
@@ -17,5 +17,7 @@
                     {% endfor %}
                 {% endif %}
                 <br><br>
+
+                <a href="{% url 'blog-comment' blog.pk %}">Add a new comment</a>
      
 {% endblock %} 
