--- a/diyblog/blog/templates/base_generic.html
+++ b/diyblog/blog/templates/base_generic.html
@@ -8,11 +8,47 @@
         </head>
 
         <body>
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                        <div class="container">
+                          <a class="navbar-brand" href="#">DjangoBlogs</a>
+                          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                              </button>
+                              <div class="collapse navbar-collapse" id="mainMenu">
+                                    {% if user.is_authenticated %}
+                                    <ul class="navbar-nav ml-auto">
+                                      <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                          {{ user.username }}
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                                          <a class="dropdown-item" href="#">My account</a>
+                                          <a class="dropdown-item" href="#">Change password</a>
+                                          <div class="dropdown-divider"></div>
+                                          <a class="dropdown-item" href="#">Log out</a>
+                                        </div>
+                                      </li>
+                                    </ul>
+                                  {% else %}
+                                    <form class="form-inline ml-auto">
+                                      <a href="#" class="btn btn-outline-secondary">Log in</a>
+                                      <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                                    </form>
+                                  {% endif %}
+                              </div>
+                        </div>
+                </nav>
             <div class="container">
                 {% block content %}
 
                 {% endblock %}
             </div>
+            <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>   
         </body>
 
 </html>
