--- a/diyblog/blog/templates/base_generic.html
+++ b/diyblog/blog/templates/base_generic.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        {% block title%}<title>Local Library</title>{% endblock%}
+        {% block title%}<title>DjangoBlogs</title>{% endblock%}
         <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -10,7 +10,7 @@
         <body>
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                         <div class="container">
-                          <a class="navbar-brand" href="#">DjangoBlogs</a>
+                          <a class="navbar-brand" href="{% url 'homepage' %}">DjangoBlogs</a>
                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                               </button>
@@ -23,16 +23,16 @@
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                           <a class="dropdown-item" href="#">My account</a>
-                                          <a class="dropdown-item" href="#">Change password</a>
+                                          <a class="dropdown-item" href="{% url 'password_reset' %}">Change password</a>
                                           <div class="dropdown-divider"></div>
-                                          <a class="dropdown-item" href="#">Log out</a>
+                                          <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                                         </div>
                                       </li>
                                     </ul>
                                   {% else %}
                                     <form class="form-inline ml-auto">
-                                      <a href="#" class="btn btn-outline-secondary">Log in</a>
-                                      <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                                      <a href="{% url 'login' %}?next={{request.path}}" class="btn btn-outline-secondary">Log in</a>
+                                      <a href="{% url 'signup' %}?next={{request.path}}" class="btn btn-primary ml-2">Sign up</a>
                                     </form>
                                   {% endif %}
                               </div>
