--- a/diyblog/blog/templates/blog/blog_detail.html
+++ b/diyblog/blog/templates/blog/blog_detail.html
@@ -1,23 +1,53 @@
 {% extends 'base_generic.html' %}
 {% block content %}
 
-   
                 <h5><strong>Title: </strong> </h5>{{blog.title}}<br>
                 <h5><strong>Blogger: </strong></h5><a href=" {% url 'blogger-detail' blog.blogger.pk%}">{{blog.blogger}}</a><br>
                 <h5><strong>Post Date: </strong></h5> {{blog.date}}<br>
                 <h5><strong>Description: </strong></h5> {{blog.description}}<br>
-                
+                <h5><strong>Likes: </strong></h5> {{blog.likes.all.count}}<br>
+                <a href="{% url 'like' blog.pk %}" class="btn btn-primary btn-small">Like</a>
 
                 <h5><strong>Comments: </strong></h5>
                 {% if blog.comments.all %}
                     {% for comment in blog.comments.all %}
-                    <strong>{{comment.commenter}}</strong>: 
-                    {{comment.comment}}<br>
-                    --({{comment.added_at}})<br>
+                    <div class="card mb-2">
+                        <div class="card-body p-4">
+                            <div class="row mb-3">
+                                <div class="col-6">
+                                        <strong class="text-muted">{{comment.commenter}}</strong>:  {{comment.comment}}<br>
+                                        <div class="mt-3">
+                                                <a href="{%url 'reply-comment' blog.pk comment.pk %}" class="btn btn-primary btn-small">Reply</a>
+                                                <div class="row mb-3">
+                                                        {% if comment.replies.all %}
+                                                        {% for c in comment.replies.all %}
+                                                            <div class="card mb-2">
+                                                                <div class="card-body">
+                                                                        <div>
+                                                                                <strong class="text-muted">{{c.replier}}</strong>:  {{c.reply}}
+                                                                        </div><br>
+                                                                </div>
+
+                                                            </div>
+                                                        {% endfor%}
+                                                    {% endif %}
+                                                </div>
+                                        </div>
+                                </div>
+                                <div class="col-3 text-right">
+                                        <strong class="text-muted">{{comment.added_at}}</strong>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                   
                     {% endfor %}
                 {% endif %}
                 <br><br>
-
+                {% if user.is_authenticated %}
                 <a href="{% url 'blog-comment' blog.pk %}">Add a new comment</a>
-     
+                {% else %}
+                <a href="{% url 'login'%}?next={{request.path}}">Login</a> to add a new comment.
+                {% endif %}
 {% endblock %} 
