--- a/diyblog/blog/templates/base_generic.html
+++ b/diyblog/blog/templates/base_generic.html
@@ -39,9 +39,14 @@
                         </div>
                 </nav>
             <div class="container">
+              <div class="col-sm-4">
+                <div class="sidenav"></div>
+              </div>
+              <div class="col-sm-8">
                 {% block content %}
 
                 {% endblock %}
+              </div>
             </div>
             <script
   src="https://code.jquery.com/jquery-3.3.1.js"
