--- a/diyblog/blog/templates/blog/blog_list.html
+++ b/diyblog/blog/templates/blog/blog_list.html
@@ -1,16 +1,29 @@
 {% extends 'base_generic.html' %}
 {% block content %}
-
-    <h3>All Blogs</h3>
-        {% if blog_list %}
-        <ul>    
-            {%for blog in blog_list %}
-                <li><a href="{% url 'blog-detail' blog.pk %}">{{blog.title}} </a> 
-                    ({{blog.date}}) 
-                    <a href="{% url 'blogger-detail' blog.blogger.pk %}">{{blog.blogger}}</a>
-                </li>
-            {% endfor%}
-        </ul>
-            
+    <div class="container">
+        {% if user.is_authenticated %}
+            <a href="{% url 'blog-create'%}" class="btn btn-primary btn-small">Write your own blog</a>
         {% endif %}
+        <h3>All Blogs</h3>
+            {% if blog_list %}
+            <ul>    
+                {%for blog in blog_list %}
+                   
+                   <div class="container">
+                        <div class="card">
+                                <div class="card-header">
+                                    <a href="{% url 'blog-detail' blog.pk %}">{{blog.title}} </a> 
+                                </div>
+                                <div class="card-body">
+                                    <h5>Blogger: </h5><a href="{% url 'blogger-detail' blog.blogger.pk %}">{{blog.blogger}}</a>
+                                    <h5>Posted On: </h5>{{blog.date}}
+                                </div>    
+                               </div>
+                   </div><br>
+                {% endfor%}
+            </ul>
+                
+            {% endif %}
+    </div>
+    
 {% endblock %} 
